# ai_job_webscraper

./: .gitignore  README.md  docker-compose.yml
backend/: API_DOCUMENTATION.md  Cargo.toml  Shuttle.Toml
backend/src/: error.rs  main.rs  response.rs
backend/src/chrome/: driver.rs
backend/src/database/: database.rs  models.rs
backend/src/handlers/: health.rs  jobs.rs  mod.rs  users.rs
backend/src/scrapers/: indeed.rs  mod.rs
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx
frontend/components/sections/: Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Pricing.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Marquee.tsx  marquee.tsx
