[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
shuttle-actix-web = "0.57.0"
shuttle-runtime = { version = "0.57.0", default-features = false }
surrealdb = "2.4.1"
thirtyfour = "0.36.1"
thiserror = "2.0.17"
tokio = "1.26.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }